--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <title>Tailwind CSS Demo</title>
   </head>
-  <body class="bg-blue-600">
+  <body class="bg-gray-600">
     <nav class="bg-blue shadow p-4 align-center">
       <ul class="flex space-x-4">
         <li><a href="#" class="text-white-500 hover:underline">Home</a></li>
