--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="mt-4 md:mt-0 md:ml-6 text-center md:text-left">
         <h2 class="text-2xl font-bold text-gray-800">About Me</h2>
         <p class="text-grey-600 mt-3 text-justify">
-          Abi Raj is a passionate and versatile IT student with a strong
+          Sarrathbabu Mohankumar is a passionate and versatile IT student with a strong
           foundation in full-stack development, AI integration, and
           problem-solving. He combines deep technical skills with a creative
           mindset to build smart and efficient solutions. From crafting sleek
@@ -282,3 +282,4 @@
     </footer>
   </body>
 </html>
+
